T201: soumen/rahul/deepak: fixing test